--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="last_name">Last Name</string>
     <string name="email_address">Email Address</string>
     <string name="github_link">Project on GITHUB (link)</string>
+    <string name="yes">Yes</string>
+    <string name="cancel_button">cancel button</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="submission_successful">Submission successful</string>
+    <string name="submission_not_successful">Submission not successful</string>
 </resources>
